--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Dump pester test results
-        shell: pwsh
+        shell: powershell
         run: |
           Write-Host 'Total Tests Executed...:  ${{ steps.test_module.outputs.total_count }}'
           Write-Host 'Total Tests PASSED.....:  ${{ steps.test_module.outputs.passed_count }}'
